<resources>
    <string name="app_name">Speed Bro</string>
    <string name="app_version">Version %s</string>
    <string name="made_by">Made by Artenes Nogueira</string>
    <string name="my_website">My website</string>
    <string name="git_repo">Git repository</string>
    <string name="app_name_full">Speed Bro\n Unofficial speedrun.com browser</string>
    <string name="try_again">Try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="run_title">%s in %s</string>
    <string name="run_title_with_game">%s: %s in %s</string>
    <string name="game">Game</string>
    <string name="no_video">No video available</string>
    <string name="error_loading_video">Error loading video</string>
    <string name="tap_to_watch_video">Tap to watch video on Twitch</string>
    <string name="no_video_available">No video available</string>
    <string name="runs">Runs</string>
    <string name="real_time">Real Time</string>
    <string name="time">Time</string>
    <string name="guest">Guest</string>
    <string name="game_time">In-game Time</string>
    <string name="nothing_here">Nothing here</string>
    <string name="search_game_users">Search for games or users</string>
    <string name="action_search">Search</string>
    <string name="searching_by">Searching by: %s</string>
    <string name="latest_runs">Latest runs</string>
    <string name="favorites">Favorites</string>
    <string name="latest_runs_in">Latest runs in %s</string>
    <string name="loading">Loading…</string>
    <string name="game_cover">Game cover</string>
    <string name="up_navigation">Up navigation</string>
    <string name="background">Background</string>
    <string name="country">Country</string>
    <string name="placement">Placement</string>
    <string name="runner">Runner</string>
    <string name="social_icon">Social Icon</string>
    <string name="about">About</string>
    <string name="game_details">Game details</string>
    <string name="runner_details">Runner details</string>

    <string name="website_url" translatable="false">http://artenes.github.io/</string>
    <string name="repo_url" translatable="false">https://github.com/Artenes/speedbro</string>
</resources>
