<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_contents"
        cardPreventCornerOverlap="true"
        cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="4dp"
        app:contentPadding="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:padding="15dp">

            <android.support.constraint.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <android.support.constraint.Guideline
                android:id="@+id/top_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />

            <TextView
                android:id="@+id/runner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="tompano" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/top_guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                tools:text="1h 35m 30s" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="77th" />

            <ImageView
                android:id="@+id/country_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/flag_icon"
                app:layout_constraintBottom_toTopOf="@+id/runner"
                app:layout_constraintStart_toEndOf="@+id/runner"
                app:layout_constraintTop_toBottomOf="@+id/runner"
                app:srcCompat="@android:drawable/ic_lock_lock"
                android:contentDescription="@string/country"/>

            <ImageView
                android:id="@+id/position_icon"
                android:layout_width="@dimen/placement_icon"
                android:layout_height="@dimen/placement_icon"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/position"
                app:layout_constraintEnd_toStartOf="@+id/position"
                app:layout_constraintTop_toBottomOf="@+id/position"
                app:srcCompat="@android:drawable/presence_away"
                android:contentDescription="@string/placement"/>

            <TextView
                android:id="@+id/realtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toTopOf="@+id/time"
                app:layout_constraintEnd_toEndOf="@+id/time"
                app:layout_constraintStart_toStartOf="@+id/time" />

            <TextView
                android:id="@+id/platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="N64" />

            <ImageView
                android:id="@+id/region_flag"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/flag_icon"
                app:layout_constraintBottom_toTopOf="@+id/platform"
                app:layout_constraintStart_toEndOf="@+id/platform"
                app:layout_constraintTop_toBottomOf="@+id/platform"
                app:srcCompat="@android:drawable/ic_lock_lock"
                android:contentDescription="@string/country"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="3 months ago" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>